--- a/olx/templates/olx/product/product_detail.html
+++ b/olx/templates/olx/product/product_detail.html
@@ -1,32 +1,113 @@
-{% load static %}
-{% load thumbnail %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-  
+{% load static %} 
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    <title>eCommerce Product Detail</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://rawgit.com/LeshikJanz/libraries/master/Bootstrap/baguetteBox.min.css">
+   
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="{% static 'js/jquery-3.1.1.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <link rel="stylesheet" href="{% static 'olx/css/create_product.css' %}">
 
+    <title>Freebie: 4 Bootstrap Gallery Templates</title>
 
-</script> 
-
-<script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <link rel="stylesheet" href="{% static 'olx/css/product_detail_style.css' %}">
-    <!------ Include the above in your HEAD tag ---------->
     <style>
-    ul#menu li {
-  display:inline;
+    body {
+    background-color: #434c50;
+    min-height: 100vh;
+    font: normal 16px sans-serif;
+    padding: 40px 0;
+}
+
+.container.gallery-container {
+    background-color: #fff;
+    color: #35373a;
+    min-height: 100vh;
+    padding: 30px 50px;
+}
+
+.gallery-container h1 {
+    text-align: center;
+    margin-top: 50px;
+    font-family: 'Droid Sans', sans-serif;
+    font-weight: bold;
+}
+
+.gallery-container p.page-description {
+    text-align: center;
+    margin: 25px auto;
+    font-size: 18px;
+    color: #999;
+}
+
+.tz-gallery {
+    padding: 40px;
+}
+
+/* Override bootstrap column paddings */
+.tz-gallery .row > div {
+    padding: 2px;
+}
+
+.tz-gallery .lightbox img {
+    width: 100%;
+    border-radius: 0;
+    position: relative;
+}
+
+.tz-gallery .lightbox:before {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -13px;
+    margin-left: -13px;
+    opacity: 0;
+    color: #fff;
+    font-size: 26px;
+    font-family: 'Glyphicons Halflings';
+    content: '\e003';
+    pointer-events: none;
+    z-index: 9000;
+    transition: 0.4s;
+}
+
+
+.tz-gallery .lightbox:after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    background-color: rgba(46, 132, 206, 0.7);
+    content: '';
+    transition: 0.4s;
+}
+
+.tz-gallery .lightbox:hover:after,
+.tz-gallery .lightbox:hover:before {
+    opacity: 1;
+}
+
+.baguetteBox-button {
+    background-color: transparent !important;
+}
+
+@media(max-width: 768px) {
+    body {
+        padding: 0;
+    }
 }
     </style>
-  </head>
-
-  <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+</head>
+<body>
+<!-- nav bar added by chirag -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
                 <div class="container">
                   <a class="navbar-brand" href="{% url 'olx:product_list' %}">Softvision Olx</a>
                   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,7 +139,7 @@
                     
                   </div>
                 </div>
-                <!--<form action="{% url "olx:product_list" %}" method="GET">
+               <!-- <form action="{% url "olx:product_list" %}" method="GET">
                         <input type="text" placeholder="search..." name="q" value="{{ request.GET.q}}"/>
                         <input type="submit" value="submit" />
                        </form>-->
@@ -104,148 +185,44 @@
                             </li>
                         </ul>
               </nav>
-	
-		<div class="container">
-                
-                <div class="row">
+<!--navbar ends here-->
+<div class="container gallery-container">
+        {% for product in prodphoto %}
+        {% if forloop.first %}
+    <h1>{{ product.name }}</h1>
+    
+    <p class="page-description text-center">Description:&nbsp;{{ product.description }}</p>
+    <p class="page-description text-center">Price:&nbsp;{{ product.price }}</p>
+    <p class="page-description text-center">Seller:{{ product.created_by }}&nbsp;&nbsp;<span class="glyphicon glyphicon-earphone"></span>:&nbsp;{{product.contact}}</p>
+    {% endif %}
 
-                       
-                    
-                    
-                   
-                    
-               <div class="card">
-                    <div class="container-fliud">
-                        <div class="wrapper row">
-                            <div class="preview col-lg-3 col-md-4 col-xs-6 thumb col-md-6">
-                                    <ul class="" id="menu">
-                                    {% for product in prodphoto %}
-                                   
-                                        <li> 
-                                    <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="This is my title" data-caption="Some lovely red flowers" data-image="{{ photo.file.url }}" data-target="#image-gallery">
-                                            {% if product.photo__file %}
+    {% endfor %}
+    <div class="tz-gallery">
 
-                                        <img class="img-responsive" src="/media/{{ product.photo__file}}" alt="Short alt text">
-                                                {% else %}
-                                                <img class="img-responsive" src="/media/photos/NoImage.jpg" alt="Short alt text">
-
-                                                {% endif %}
-                                    </a></li>
-                                    
-                                {% endfor %}
-                               </ul>
-                               
-                            </div>
-                            {% for product in prodphoto %}
-                             {% if forloop.first %}
-                            <div class="details col-md-6">
-                                <h3 class="product-title">{{ product.name }}</h3>
-                            
-                                <p class="product-description">{{ product.description }}</p>
-                                <h4 class="price">current price: <span>{{ product.price }}</span></h4>
-                                <p>Seller:{{ product.created_by }}&nbsp;&nbsp;<span class="glyphicon glyphicon-earphone"></span>:&nbsp;{{product.contact}}</p>
-                            
-                            
-                            </div>
-                            {% endif %}
-
-                            {% endfor %}
-                        </div>
-                    </div>
-                </div>
-                
+        <div class="row">
+            {% for product in prodphoto %}
+            <div class="col-sm-12 col-md-4">
+                    {% if product.photo__file %}
+                <a class="lightbox" href="/media/{{ product.photo__file}}">
+                    <img src="/media/{{ product.photo__file}}" alt="Bridge">
+                </a>
+                {% else %}
+                <a class="lightbox" href="/media/photos/NoImage.jpg">
+                    <img src="/media/photos/NoImage.jpg" alt="Bridge">
+                </a>
+                {% endif %}
             </div>
-            <div class="modal fade" id="image-gallery" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
-                                <h4 class="modal-title" id="image-gallery-title"></h4>
-                            </div>
-                            <div class="modal-body">
-                                <img id="image-gallery-image" class="img-responsive" src="">
-                            </div>
-                            <div class="modal-footer">
-                
-                                <div class="col-md-2">
-                                    <button type="button" class="btn btn-primary" id="show-previous-image">Previous</button>
-                                </div>
-                
-                                <div class="col-md-8 text-justify" id="image-gallery-caption">
-                                    This text will be overwritten by jQuery
-                                </div>
-                
-                                <div class="col-md-2">
-                                    <button type="button" id="show-next-image" class="btn btn-default">Next</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    </div>
-		</div>
-            <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-            <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
-            <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-            
-            <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-            <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-            <script>
-           $(document).ready(function(){
+           {% endfor %}
 
-loadGallery(true, 'a.thumbnail');
+        </div>
 
-//This function disables buttons when needed
-function disableButtons(counter_max, counter_current){
-    $('#show-previous-image, #show-next-image').show();
-    if(counter_max == counter_current){
-        $('#show-next-image').hide();
-    } else if (counter_current == 1){
-        $('#show-previous-image').hide();
-    }
-}
+    </div>
 
-/**
- *
- * @param setIDs        Sets IDs when DOM is loaded. If using a PHP counter, set to false.
- * @param setClickAttr  Sets the attribute for the click handler.
- */
+</div>
 
-function loadGallery(setIDs, setClickAttr){
-    var current_image,
-        selector,
-        counter = 0;
-
-    $('#show-next-image, #show-previous-image').click(function(){
-        if($(this).attr('id') == 'show-previous-image'){
-            current_image--;
-        } else {
-            current_image++;
-        }
-
-        selector = $('[data-image-id="' + current_image + '"]');
-        updateGallery(selector);
-    });
-
-    function updateGallery(selector) {
-        var $sel = selector;
-        current_image = $sel.data('image-id');
-        $('#image-gallery-caption').text($sel.data('caption'));
-        $('#image-gallery-title').text($sel.data('title'));
-        $('#image-gallery-image').attr('src', $sel.data('image'));
-        disableButtons(counter, $sel.data('image-id'));
-    }
-
-    if(setIDs == true){
-        $('[data-image-id]').each(function(){
-            counter++;
-            $(this).attr('data-image-id',counter);
-        });
-    }
-    $(setClickAttr).on('click',function(){
-        updateGallery($(this));
-    });
-}
-});
-            </script>
-  </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.js"></script>
+<script>
+    baguetteBox.run('.tz-gallery');
+</script>
+</body>
 </html>
