--- a/olx/templates/olx/product/myPost.html
+++ b/olx/templates/olx/product/myPost.html
@@ -77,11 +77,11 @@
                           <!--<li class="nav-item">
                             <a class="nav-link" href="{% url "olx:logout_from_app" %}">Logout</a>
                           </li>-->
-                          <li class="nav-item">
+                          <!--<li class="nav-item">
                             <a class="nav-link" href="#">Services</a>
-                          </li>
+                          </li>-->
                           <li class="nav-item">
-                            <a class="nav-link" id="contact" href="#">Contact</a>
+                            <a class="nav-link" id="contact" href="#">Contact Admin</a>
                           </li>&nbsp;&nbsp;
                           
                          
@@ -218,6 +218,13 @@ $(document).on('click', ".markSold", function () {
 });
 
 </script>
+<script>
 
+        $(document).on("click","#contact",function(){
+     alert("This webliste is under development you can cantact 'CHIRAG SONI' @ <chirag.soni@softvision.com>");
+    });
+    
+    
+    </script>
 </body>
 </html>
