--- a/olx/templates/olx/product/product_detail.html
+++ b/olx/templates/olx/product/product_detail.html
@@ -127,11 +127,11 @@
                       <!--<li class="nav-item">
                         <a class="nav-link" href="{% url "olx:logout_from_app" %}">Logout</a>
                       </li>-->
-                      <li class="nav-item">
+                      <!--<li class="nav-item">
                         <a class="nav-link" href="#">Services</a>
-                      </li>
+                      </li>-->
                       <li class="nav-item">
-                        <a class="nav-link" id="contact" href="#">Contact</a>
+                        <a class="nav-link" id="contact" href="#">Contact Admin</a>
                       </li>&nbsp;&nbsp;
                       
                      
@@ -224,5 +224,13 @@
 <script>
     baguetteBox.run('.tz-gallery');
 </script>
+<script>
+
+        $(document).on("click","#contact",function(){
+     alert("This webliste is under development you can cantact 'CHIRAG SONI' @ <chirag.soni@softvision.com>");
+    });
+    
+    
+    </script>
 </body>
 </html>
